# fastapi_crud

./: pyproject.toml
fastapi_crud/: app.py
tests/: test_app.py
